--- a/Homeworks/Homework #1/HW1.tex
+++ b/Homeworks/Homework #1/HW1.tex
@@ -499,9 +499,9 @@ as required
 \end{enumerate}
 
 \begin{proof}
-Let $|x| = n < \infty$. Now suppose that there are numbers $m, k \in \ZZ$ with $0 \leq m, k \leq n-1$ and $k < m$ such that $x^m = x^k$.\\
+Let $|x| = n < \infty$. Now suppose that there are numbers $m, k \in \ZZ$ with $0 \leq k < m \leq n-1$ such that $x^m = x^k$.\\
 
-Then we clearly have that,
+Then we have that,
 \begin{align*}
 x^k \cdot x &= x^m \cdot x\\
 x^k \cdot x^2 &= x^m \cdot x^2\\
